Update class card item, remove label td

--- a/tpl/card-polionex.html
+++ b/tpl/card-polionex.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card card-item">
   <div class="title-card">
     <span>Altcoins</span>
   </div>
@@ -8,9 +8,10 @@
       <th>
         Moeda
       </th>
+      <!-- XXX:
       <th>
         Conversão
-      </th>
+      </th>-->
       <th>
         Volume
       </th>
@@ -25,9 +26,10 @@
       <td>
         {{lite.currency}}
       </td>
-      <td>
+      <!-- XXX:  <td>
         {{lite.label}}
-      </td>
+      </td>-->
+
       <td>
         {{lite.volume}}
       </td>
@@ -42,9 +44,10 @@
       <td>
         {{doge.currency}}
       </td>
-      <td>
+      <!-- XXX:  <td>
         {{doge.label}}
-      </td>
+      </td>-->
+
       <td>
         {{doge.volume}}
       </td>
@@ -59,9 +62,9 @@
       <td>
         {{ether.currency}}
       </td>
-      <td>
+      <!-- XXX:  <td>
         {{ether.label}}
-      </td>
+      </td>-->
       <td>
         {{ether.volume}}
       </td>
@@ -76,9 +79,10 @@
       <td>
         {{dash.currency}}
       </td>
-      <td>
+      <!-- XXX:  <td>
         {{dash.label}}
-      </td>
+      </td>-->
+
       <td>
         {{dash.volume}}
       </td>
