Update class card item, remove label td

--- a/tpl/card-bitvalor.html
+++ b/tpl/card-bitvalor.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card card-item">
   <div class="title-card">
     <span>BitValor - Consolidado 12h Horas</span>
   </div>
@@ -11,12 +11,13 @@
       <th>
         Volume
       </th>
-      <th>
+      <!-- XXX: <th>
         Maior Valor
       </th>
       <th>
         Menor Valor
-      </th>
+      </th> -->
+
       <th>
         Last Trade
       </th>
@@ -29,30 +30,32 @@
       <td>
         {{bitvalor.FOX.vol}}
       </td>
-      <td>
+      <!-- XXX:  <td>
         {{bitvalor.FOX.high}}
       </td>
       <td>
         {{bitvalor.FOX.low}}
-      </td>
+      </td>-->
+
       <td>
         {{bitvalor.FOX.last}}
       </td>
     </tr>
     <tr>
       <td>
-        Mercado Bitcoin
+        MBTC
       </td>
 
       <td>
         {{bitvalor.MBT.vol}}
       </td>
-      <td>
+      <!-- XXX:  <td>
         {{bitvalor.MBT.high}}
       </td>
       <td>
         {{bitvalor.MBT.low}}
-      </td>
+      </td>-->
+
       <td>
         {{bitvalor.MBT.last}}
       </td>
@@ -66,12 +69,13 @@
       <td>
         {{bitvalor.B2U.vol}}
       </td>
-      <td>
+      <!-- XXX:  <td>
         {{bitvalor.B2U.high}}
       </td>
       <td>
         {{bitvalor.B2U.low}}
-      </td>
+      </td>-->
+
       <td>
         {{bitvalor.B2U.last}}
       </td>
@@ -84,12 +88,13 @@
       <td>
         {{bitvalor.NEG.vol}}
       </td>
-      <td>
+      <!-- XXX:  <td>
         {{bitvalor.NEG.high}}
       </td>
       <td>
         {{bitvalor.NEG.low}}
-      </td>
+      </td>-->
+
       <td>
         {{bitvalor.NEG.last}}
       </td>
@@ -102,17 +107,18 @@
       <td>
         {{bitvalor.FLW.vol}}
       </td>
-      <td>
+      <!-- XXX:  <td>
         {{bitvalor.FLW.high}}
       </td>
       <td>
         {{bitvalor.FLW.low}}
-      </td>
+      </td>-->
+
       <td>
         {{bitvalor.FLW.last}}
       </td>
     </tr>
-    <tr>
+    <!-- XXX: <tr>
       <td>
         LocalBitcoins
       </td>
@@ -129,6 +135,7 @@
       <td>
         {{bitvalor.LOC.last}}
       </td>
-    </tr>
+    </tr> -->
+
   </table>
 </div>
