--- a/tpl/card-exchanges.html
+++ b/tpl/card-exchanges.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card card-item">
   <div class="title-card">
     <span>Exchanges Brasileiras</span>
   </div>
@@ -11,12 +11,14 @@
       <th>
         Volume
       </th>
+      <!-- XXX:
       <th>
         Maior Valor
       </th>
       <th>
         Menor Valor
       </th>
+      -->
       <th>
         Last Trade
       </th>
@@ -28,12 +30,13 @@
       <td>
         {{foxbit.vol}}
       </td>
-      <td>
+      <!-- XXX:  <td>
         {{foxbit.high}}
       </td>
       <td>
         {{foxbit.low}}
-      </td>
+      </td>-->
+
       <td>
         {{foxbit.last}}
       </td>
@@ -45,12 +48,14 @@
       <td>
         {{mtc.ticker.vol}}
       </td>
+      <!-- XXX:
       <td>
         {{mtc.ticker.high}}
       </td>
       <td>
         {{mtc.ticker.low}}
       </td>
+      -->
       <td>
         {{mtc.ticker.last}}
       </td>
@@ -63,12 +68,13 @@
       <td>
         {{btctoyou.ticker.vol}}
       </td>
-      <td>
+      <!-- XXX:  <td>
         {{btctoyou.ticker.high}}
       </td>
       <td>
         {{btctoyou.ticker.low}}
-      </td>
+      </td>-->
+
       <td>
         {{btctoyou.ticker.last}}
       </td>
@@ -81,12 +87,12 @@
       <td>
         {{negociecoins.vol}}
       </td>
-      <td>
+      <!-- XXX:  <td>
         {{negociecoins.high}}
       </td>
       <td>
         {{negociecoins.low}}
-      </td>
+      </td>-->
       <td>
         {{negociecoins.last}}
       </td>
@@ -99,12 +105,13 @@
       <td>
         {{flowbtc.volume}}
       </td>
-      <td>
+      <!-- XXX:  <td>
         {{flowbtc.high}}
       </td>
       <td>
         {{flowbtc.low}}
-      </td>
+      </td>-->
+
       <td>
         {{flowbtc.last}}
       </td>
