Update header and wrapper class

--- a/tpl/card-foxbitwallet.html
+++ b/tpl/card-foxbitwallet.html
@@ -1,9 +1,12 @@
-<div class="card">
+<div class="card card-item">
   <div class="title-card">
     <span>Carteiras FoxBit</span>
   </div>
   <table class="pure-table pure-table-horizontal">
-    <tr colspan=1>
+    <tr>
+      <td>
+      Carteira Quente
+      </td>
       <td>
       Carteira Quente
       </td>
@@ -35,7 +38,10 @@
   </table>
 
   <table class="pure-table pure-table-horizontal">
-    <tr colspan=1>
+    <tr>
+      <td>
+      Carteira Fria
+      </td>
       <td>
       Carteira Fria
       </td>
