--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
 
 
     <div class="card-content wrapper">
-      <!-- XXX:
-      <ng-view></ngview>
-      -->
-
-
+      <ng-include src="'tpl/calc/main-calculator.html'"></ng-include>
       <ng-include src="'tpl/card-exchanges.html'"></ng-include>
       <ng-include src="'tpl/card-bitvalor.html'"></ng-include>
       <ng-include src="'tpl/card-polionex.html'"></ng-include>
@@ -45,12 +41,21 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
 
+
     <script src="./bower_components/angular/angular.js" type="text/javascript"></script>
-    <script src="./bower_components/angular/angular-route.js" type="text/javascript"></script>
     <script src="./bower_components/angular-animate/angular-animate.js" type="text/javascript"></script>
     <script src="./bower_components/angular-aria/angular-aria.js" type="text/javascript"></script>
+    <script src="./bower_components/angular-messages/angular-messages.min.js"></script>
 
     <script src="./bower_components/angular-material/angular-material.js" type="text/javascript"></script>
+
+<!-- XXX:
+
+  <script src="./bower_components/angular/angular-route.js" type="text/javascript"></script>
+
+ -->
+
+
 
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="valuep.js"></script>
