--- a/tpl/calc/bitcoincalculator.html
+++ b/tpl/calc/bitcoincalculator.html
@@ -1,26 +1,20 @@
-<div class="mainCalculator">
-  <div class="title-card-calculator">
-    <div class="title-card-calculator-text">
-      <a href="#/">Calculadora Bitcoin</a>
-      <a href="#satoshi">Calculadora Satoshi</a>
-      <a href="#bit">Calculadora Bits</a>
-      <a href="#income">Lucro Trade</a>
-    </div>
-  </div>
-  <div class="mainresults">
-    <div class="results">
-      <span class="labelPrice"> BRL : </span>
-      <span class="price"> {{ brlref * bitcoin | number : 2}} </span>
-    </div>
+<div class="card card-item">
 
-    <div class="results">
-      <span class="labelPrice">Bitcoin :</span>
-      <span class="price"> {{ brl / brlref | number : 8 }} </span>
+    <div class="title-card">
+      <span><a href="#/">Calculadora Bitcoin</a></span>
+      <!-- XXX:  <span><a href="#satoshi">Calculadora Satoshi</a></span>
+      <span><a href="#bit">Calculadora Bits</a></span>
+      <span><a href="#income">Lucro Trade</a></span>-->
+
     </div>
-  </div>
-  <div class="inputCalculator">
-    <input class="inputcalc" type="text" name="brlrefname" value="" ng-model="brlref" ng-required="number" placeholder="Digite o preço do Bitcoin">
+<div class="container-calc">
+
+      <span class="labelPrice"> BRL : {{ brlref * bitcoin | number : 2}}</span>
+      <span class="labelPrice">Bitcoin : {{ brl / brlref | number : 8 }}</span>
+    
     <input class="inputcalc" type="text" name="brlname" value="" ng-model="brl" ng-required="number" placeholder="Valor em Reais">
     <input class="inputcalc" type="text" name="btcname" value="" ng-model="bitcoin" required="number" placeholder="Valor em Bitcoins">
-  </div>
+
+</div>
+
 </div>
