Update - pure css removed , draggable implemented

--- a/tpl/card-exchanges.html
+++ b/tpl/card-exchanges.html
@@ -1,9 +1,9 @@
-<div class="card card-item">
+<div id="drag1" class="card card-item" draggable="true" ondragstart="drag(event)">
   <div class="title-card">
     <span>Exchanges Brasileiras</span>
   </div>
 
-  <table class="pure-table pure-table-horizontal">
+  <table class="">
     <tr>
       <th>
         Empresas
