--- a/tpl/card-polionex.html
+++ b/tpl/card-polionex.html
@@ -1,9 +1,9 @@
-<div class="card card-item">
+<div id="div1" class="card card-item" ondrop="drop(event)" ondragover="allowDrop(event)">
   <div class="title-card">
-    <span>Altcoins</span>
+    <span>Poloniex</span>
   </div>
 
-  <table class="pure-table pure-table-horizontal">
+  <table class="">
     <tr>
       <th>
         Moeda
