Update -- pure were removed

--- a/tpl/card-bitvalor.html
+++ b/tpl/card-bitvalor.html
@@ -3,7 +3,7 @@
     <span>BitValor - Consolidado 12h Horas</span>
   </div>
 
-  <table class="pure-table pure-table-horizontal">
+  <table class="">
     <tr>
       <th>
         Empresas
