Update -- pure were removed

--- a/tpl/card-foxbitwallet.html
+++ b/tpl/card-foxbitwallet.html
@@ -2,7 +2,7 @@
   <div class="title-card">
     <span>Carteiras FoxBit</span>
   </div>
-  <table class="pure-table pure-table-horizontal">
+  <table class="">
     <tr>
       <td>
       Carteira Quente
@@ -37,7 +37,7 @@
     </tr>
   </table>
 
-  <table class="pure-table pure-table-horizontal">
+  <table class="">
     <tr>
       <td>
       Carteira Fria
