--- a/app/tpl/calc/bitcalculator.html
+++ b/app/tpl/calc/bitcalculator.html
@@ -1,25 +1,21 @@
-<div class="mainCalculator card">
-  <div class="title-card-calculator">
-    <div class="title-card-calculator-text">
-      <a href="#/">Calculadora Bitcoin</a>
-      <a href="#satoshi">Calculadora Satoshis</a>
-      <a href="#bit">Calculadora Bits</a>
-      <a href="#income">Lucro Trade</a>
+<div class="card card-item">
+  <div class="title-card">
+
+      <span><a href="#/">Calculadora Bitcoin</a></span>
+      <!-- XXX:  <span><a href="#satoshi">Calculadora Satoshis</a></span>
+      <span><a href="#bit">Calculadora Bits</a></span>
+      <span><a href="#income">Lucro Trade</a></span>-->
+
     </div>
-  </div>
+
   <div class="mainresults">
-    <div class="results">
       <span class="labelPrice">BRL : </span>
-      <span class="price"> {{ brlref * bitcoin / 1000000 | number : 5}} </span>
-    </div>
-
-    <div class="results">
+      <span class="labelPrice"> {{ brlref * bitcoin / 1000000 | number : 5}} </span>
       <span class="labelPrice">Bit :</span>
-      <span class="price"> {{ brl / brlref * 100 | number : 8 }} </span>
-    </div>
+      <span class="labelPrice"> {{ brl / brlref * 100 | number : 8 }} </span>
   </div>
 
-  <div class="inputCalculator">
+  <div class="">
     <input class="inputcalc" type="text" name="brlrefname" value="" ng-model="brlref" ng-required="number" placeholder="Digite o preço do Bitcoin">
     <input class="inputcalc" type="text" name="brlname" value="" ng-model="brl" ng-required="number" placeholder="Valor em Reais">
     <input class="inputcalc" type="text" name="btcname" value="" ng-model="bitcoin" required="number" placeholder="Valor em Bits" maxlength="8">
